--- a/index.html
+++ b/index.html
@@ -1,1 +1,225 @@
-# Docplanner-remake
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Docplanner Group by Ezékiel</title>
+    <link rel="shortcut icon" href="https://www.docplanner.com/img/sygnet.png" type="image/x-icon">
+</head>
+<body>
+    <header>
+        <div>
+            <img src="https://www.docplanner.com/img/logo-default-group-en.svg?v=1" alt="logo-default-group-en">
+
+        <nav>
+            <a href="#Aboutus">About us</a>
+            <a href="#Career">Career</a>
+            <a href="#Departements">Departments</a>
+        </nav>
+        </div>
+    </header>
+
+    <div id="photo"><img src="https://www.docplanner.com/img/sygnet.png" alt="image du logo" id="logo"></div>
+    <div id="titre"><h1>Making the healthcare experience more human</h1></div>
+
+    <section id="Apropos">
+        <div><p>We want patients to find the perfect doctor and book an appointment in the most easy way. The patient journey should be enjoyable, and that's why we are always next to them: to help them find the best possible care. Anytime, anywhere.</p></div>
+        <div><p>We also help doctors to better manage their practice and build their online reputation. With our integrated end-to-end solution, doctors are able not only to improve their online presence, but also to devote their time to what really matters: their patients.</p></div>
+    </section>
+
+    <section class="For">
+        <div id="patients">
+            <img src="https://www.docplanner.com/icons/icon-patients.svg" alt="icon-patients">
+            <h1>For patients</h1> 
+            <p>Find a doctor, book a visit and solve any health-related doubt</p>
+            <select name="all" id="alist">
+                <option value="#">Choose country</option>
+                <option value="#">Argentina</option>
+                <option value="#">Brazil</option>
+                <option value="#">Chilie</option>
+                <option value="#">Colombia</option>
+                <option value="#">Czech</option>
+                <option value="#">Germany</option>
+                <option value="#">Italy</option>
+                <option value="#">Mexico</option>
+                <option value="#">Peru</option>
+                <option value="#">Poland</option>
+                <option value="#">Portugal</option>
+                <option value="#">Spain</option>
+                <option value="#">Turkey</option>
+            </select>
+        </div>
+
+        <div id="doctors">
+            <img src="https://www.docplanner.com/icons/icon-doctors.svg" alt="icon-doctors">
+            <h2>For doctors</h2>
+            <p>Save time managing visits and cut no-shows by half</p>
+            <select name="all" id="alist">
+                <option value="#">Choose country</option>
+                <option value="#">Argentina</option>
+                <option value="#">Brazil</option>
+                <option value="#">Chilie</option>
+                <option value="#">Colombia</option>
+                <option value="#">Czech</option>
+                <option value="#">Germany</option>
+                <option value="#">Italy</option>
+                <option value="#">Mexico</option>
+                <option value="#">Peru</option>
+                <option value="#">Poland</option>
+                <option value="#">Portugal</option>
+                <option value="#">Spain</option>
+                <option value="#">Turkey</option>
+            </select>
+        </div>
+        
+        <div id="clinics">
+            <img src="https://www.docplanner.com/icons/icon-clinics.svg" alt="icon-clinics">
+            <h3>For clinics</h3>
+            <p>Deliver an exceptional patient experience in your clinic</p>
+            <div class="cli">
+                <select name="two" id="twlist">
+                    <option value="#">2 to 20 specialists</option>
+                    <option value="#">Brazil</option>
+                    <option value="#">Czech</option>
+                    <option value="#">Italy</option>
+                    <option value="#">Mexico</option>
+                    <option value="#">Poland</option>
+                    <option value="#">Spain</option>
+                    <option value="#">Turkey</option>
+                </select>
+                <select name="three" id="thlist">
+                    <option value="#">More than 20 specialists</option>
+                    <option value="#">Brazil</option>
+                    <option value="#">Italy</option>
+                    <option value="#">Mexico</option>
+                    <option value="#">Poland</option>
+                    <option value="#">Spain</option>
+                </select>
+            </div>
+        </div>
+    </section>
+
+    <section id="sites">
+        <div id="company">
+            <h1>We are a global company with local culture</h1>
+        </div>
+        <div id="others">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/znanylekarz.png" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/Doctoralia.png" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/MioDottore.png" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/doktortakvimi.png" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/Znamylekar.jpg" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-jameda.svg" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-tuotempo.svg" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-gipo-primary.svg" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-clinicloud.svg" alt="">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-feegow.svg" alt="">
+        </div>
+    </section>
+
+    <section id="infos">
+        <div id="gauche">
+            <h1>The world's biggest healthcare platform</h1>
+            <p>We work from 6 offices all over the world, bringing Docplanner Group to life in 13 countries.</p>
+            <img src="https://docplanner-gomycode.onrender.com/logos/logocropped.png" alt="">
+        </div>
+        <div id="droite">
+            <div id="tete">
+                <div id="leader">
+                    <img src="https://www.docplanner.com/img/flag.png" alt="">
+                    <h2>Leader in 13 countries</h2>
+                    <p>Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech Republic, Portugal, Argentina, Peru and Chile</p>
+                </div>
+                <div id="appointments">
+                    <img src="https://www.docplanner.com/img/visits.png" alt="">
+                    <h2>15,000,000 appointments</h2>
+                    <p>booked last month</p>
+                </div>
+            </div>    
+            <div id="tete">
+                <div id="patie">
+                    <img src="https://docplanner-gomycode.onrender.com/img/patients.png" alt="">
+                    <h2>90,000,000 patients</h2>
+                    <p>visit our websites each month</p>
+                </div>
+                <div id="doc">
+                    <img src="https://docplanner-gomycode.onrender.com/img/doctors.png" alt="">
+                    <h2>210,000 active doctors</h2>
+                    <p>trust our solutions</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="life">
+        <h1>Improve the lives of millions.</h1>
+        <h1> Change yours forever.</h1>
+    </section>
+    <p id="mate">More than 2800 team mates share our same vision, goals and passion. With offices in Warsaw, Barcelona, Munich, Istanbul, Rome, Rio, Bologna, Mexico City and Curitiba, our search for great talent never stops.</p>
+
+    <section id="villes">
+        <div id="rang">
+            <div>
+                <img src="https://www.docplanner.com/images/warsaw.png" alt="">
+                <h4>Warsaw</h4>
+                <button id="btn">SEE OPENINGS</button>
+            </div>
+            <div>
+                <img src="https://www.docplanner.com/images/barcelona.png" alt="">
+                <h4>Barcelona</h4>
+                <button id="btn">SEE OPENINGS</button>
+            </div>
+            <div>
+                <img src="https://www.docplanner.com/images/munich.png" alt="">
+                <h4>Munich</h4>
+                <button id="btn">SEE OPENINGS</button>
+            </div>
+        </div>
+        <div id="rang">
+            <div>
+                <img src="https://www.docplanner.com/images/istanbul.png" alt="">
+                <h4>Istanbul</h4>
+                <button id="btn">SEE OPENINGS</button>
+            </div>
+            <div>
+                <img src="https://www.docplanner.com/images/rome.png" alt="">
+                <h4>Rome</h4>
+                <button id="btn">SEE OPENINGS</button>
+            </div>
+            <div>
+                <img src="https://www.docplanner.com/images/bologna.png" alt="">
+                <h4>Bologna</h4>
+                <button id="btn">SEE OPENINGS</button>
+            </div>
+        </div>
+        <div id="rang">
+            <div>
+                <img src="https://www.docplanner.com/images/curitiba.png" alt="">
+                <h4>Curitiba</h4>
+                <button id="btn">SEE OPENINGS</button>
+            </div>
+            <div>
+                <img src="https://www.docplanner.com/images/rio-janeiro.png" alt="">
+                <h4>Rio De Janeiro</h4>
+                <button id="btn">SEE OPENINGS</button>
+            </div>
+            <div>
+                <img src="https://www.docplanner.com/images/mexico-city.png" alt="">
+                <h4>Mexico City</h4>
+                <button id="btn²">SEE OPENINGS</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="interesting">
+        <h5>Sounds interesting? Join us now!</h5>
+        <button>SEE ALL CURRENT OPENINGS</button>
+    </section>
+
+    <footer><p>We are leaders in 13 countries: Poland, Turkey, Spain, Italy, Germany, Czech Republic, Portugal, Mexico, Colombia, Brazil, Argentina, Peru and Chile
+
+        www.docplanner.com © 2023</p></footer>
+
+</body>
+</html>
